# DataPeer

./: CMakeLists.txt  README.md  client_peer.cpp  client_peer.h  data_peer.cpp  data_peer.h  main.cpp  server_peer.cpp  server_peer.h
comm/: data_channel.cpp  data_channel.h  message_handler.h  message_router.h
comm/actions/: action_callbacks.h  action_handler.cpp  action_handler.h
comm/client/: client_coupling_handler.cpp  client_coupling_handler.h  client_coupling_handler_callbacks.h  communication_client.cpp  communication_client.h
comm/server/: communication_server.cpp  communication_server.h  server_coupling_handler.cpp  server_coupling_handler.h  server_coupling_handler_callbacks.h
git/: COMMIT_EDITMSG  ORIG_HEAD  config  index
git/logs/: HEAD
git/logs/refs/heads/: master
git/refs/heads/: master
lib/: abstract_serializer.cpp  abstract_serializer.h  message.cpp  message.h  message_sender.h  serializable.h  serialization_context.cpp  serialization_context.h  serialization_context_p.h  transceiver.cpp  transceiver.h
msg/: actions.h  coupling.h  data.h  peer.h
